[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/game.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/add_moves.gd" type="Script" id=2]
[ext_resource path="res://themes/theme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/pieces_selector.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/saver.tscn" type="PackedScene" id=5]

[node name="add_moves" type="Node2D"]
z_index = 1
z_as_relative = false
script = ExtResource( 2 )

[node name="game" parent="." instance=ExtResource( 1 )]

[node name="add_layer" type="CanvasLayer" parent="."]
layer = 0

[node name="pieces_selector" parent="add_layer" instance=ExtResource( 4 )]
position = Vector2( 143.731, 35.0637 )
scale = Vector2( 0.8, 0.8 )
z_index = -17

[node name="Control" type="Control" parent="add_layer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 494.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="add_layer/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -198.5
margin_top = -60.0
margin_right = 198.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="add_layer/Control/CenterContainer"]
margin_left = 59.0
margin_top = 18.0
margin_right = 337.0
margin_bottom = 41.0

[node name="saveInitial" type="Button" parent="add_layer/Control/CenterContainer/HBoxContainer"]
margin_right = 155.0
margin_bottom = 23.0
text = "Save initial position"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save" type="Button" parent="add_layer/Control/CenterContainer/HBoxContainer"]
margin_left = 159.0
margin_right = 210.0
margin_bottom = 23.0
disabled = true
text = "Save"

[node name="cancel" type="Button" parent="add_layer/Control/CenterContainer/HBoxContainer"]
margin_left = 214.0
margin_right = 278.0
margin_bottom = 23.0
text = "Cancel"

[node name="Control2" type="Control" parent="add_layer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -255.0
margin_right = 255.0
margin_bottom = 21.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="add_layer/Control2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="color" type="Button" parent="add_layer/Control2/CenterContainer2"]
margin_left = 228.0
margin_top = 6.0
margin_right = 282.0
margin_bottom = 29.0
text = "white"

[node name="Control3" type="Control" parent="add_layer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="add_layer/Control3"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0666667, 0.0705882, 0.0470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="add_layer/Control3"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="add_layer/Control3/CenterContainer2"]
margin_left = 173.0
margin_top = 265.0
margin_right = 336.0
margin_bottom = 294.0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="add_layer/Control3/CenterContainer2/HBoxContainer"]
margin_top = 5.0
margin_right = 46.0
margin_bottom = 24.0
text = "Name:"

[node name="TextEdit" type="LineEdit" parent="add_layer/Control3/CenterContainer2/HBoxContainer"]
margin_left = 50.0
margin_right = 108.0
margin_bottom = 29.0
max_length = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_with_name" type="Button" parent="add_layer/Control3/CenterContainer2/HBoxContainer"]
margin_left = 112.0
margin_right = 163.0
margin_bottom = 29.0
text = "Save"

[node name="saver" parent="." instance=ExtResource( 5 )]

[connection signal="first_move" from="game" to="." method="_on_game_first_move"]
[connection signal="pressed" from="add_layer/Control/CenterContainer/HBoxContainer/saveInitial" to="." method="_on_saveInitial_pressed"]
[connection signal="pressed" from="add_layer/Control/CenterContainer/HBoxContainer/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="add_layer/Control/CenterContainer/HBoxContainer/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="add_layer/Control2/CenterContainer2/color" to="." method="_on_color_pressed"]
[connection signal="text_entered" from="add_layer/Control3/CenterContainer2/HBoxContainer/TextEdit" to="." method="_on_TextEdit_text_entered"]
[connection signal="pressed" from="add_layer/Control3/CenterContainer2/HBoxContainer/save_with_name" to="." method="_on_save_with_name_pressed"]
